solc_ossfuzz_seed_corpus/test_sol/test_aed2281fe857a420aa3bbe73ddf5e6998567d0ff280b1f1aba53709e9c5f8ed2_constant_sol.sol
contract C {
	uint constant x = 2;
	uint constant z = uint(x)*10;
	uint[z] a;

	function f() public pure returns (uint) {
		return z;
	}
}
// ----
// TypeError 5462: (72-73): Invalid array length, expected integer literal or constant expression.
